Cap nhat anh bia cho trang web

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Tandev.foto Studio - Chỉnh sửa ảnh photobooth</title>
+      <meta property="og:title" content="Tandev.foto Studio - Chỉnh sửa ảnh photobooth" />
+      <meta property="og:description" content="Công cụ chỉnh sửa và tạo photobooth chuyên nghiệp, nhanh chóng và tiện lợi." />
+      <meta property="og:image" content="https://i.pinimg.com/736x/11/df/33/11df330c253c214f6d94a548341b057b.jpg" />
       <script src="https://cdn.tailwindcss.com"></script>
       <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
       <link
         href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&family=Permanent+Marker&display=swap"
         rel="stylesheet"
       />
+        
+
+
       <style>
 
 
