Sua loi cameraaa

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tandev.foto Studio - Chỉnh sửa ảnh photobooth</title>
+    <title>Tandev.foto Studio - Photobooth</title>
     <meta
       property="og:title"
       content="Tandev.foto Studio - Chỉnh sửa ảnh photobooth" />
