--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
   <!DOCTYPE html>
   <html lang="vi">
     <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Tandev.foto Studio - Chỉnh sửa ảnh photobooth</title>
-      <meta property="og:title" content="Tandev.foto Studio - Chỉnh sửa ảnh photobooth" />
-      <meta property="og:description" content="Công cụ chỉnh sửa và tạo photobooth chuyên nghiệp, nhanh chóng và tiện lợi." />
-      <meta property="og:image" content="https://i.pinimg.com/736x/e7/47/c7/e747c7057dcd237d7da58bdeceaa9025.jpg" />
-      <script src="https://cdn.tailwindcss.com"></script>
-      <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&family=Permanent+Marker&display=swap"
-        rel="stylesheet"
-      />
+ <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tandev.foto Studio - Chỉnh sửa ảnh photobooth</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Công cụ chỉnh sửa và tạo photobooth chuyên nghiệp, nhanh chóng và tiện lợi." />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Tandev.foto Studio - Chỉnh sửa ảnh photobooth" />
+  <meta property="og:description" content="Công cụ chỉnh sửa và tạo photobooth chuyên nghiệp, nhanh chóng và tiện lợi." />
+  <meta property="og:image" content="https://raw.githubusercontent.com/duongthaitan/PhotoBooth_Tandev.foto/main/backgound.jpg" />
+  <meta property="og:url" content="https://photobooth.tanhipp.id.vn/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tandev.foto Studio - Chỉnh sửa ảnh photobooth" />
+  <meta name="twitter:description" content="Công cụ chỉnh sửa và tạo photobooth chuyên nghiệp, nhanh chóng và tiện lợi." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/duongthaitan/PhotoBooth_Tandev.foto/main/backgound.jpg" />
+
+  <!-- CSS & JS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&family=Permanent+Marker&display=swap"
+    rel="stylesheet"
+  />
         
 
 
