Cap nhat anh bia ưebsite

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   <meta property="og:title" content="Tandev.foto Studio - Chỉnh sửa ảnh photobooth" />
   <meta property="og:description" content="Công cụ chỉnh sửa và tạo photobooth chuyên nghiệp, nhanh chóng và tiện lợi." />
   <meta property="og:image" content="https://raw.githubusercontent.com/duongthaitan/PhotoBooth_Tandev.foto/main/backgound.jpg" />
-  <meta property="og:url" content="https://photobooth.tanhipp.id.vn/" />
-  <meta property="og:type" content="website" />
-
+<meta property="og:image" content="https://photobooth.tanhipp.id.vn/backgound.jpg" />
+    <meta property="og:url" content="https://photobooth.tanhipp.id.vn/" />
+    <meta property="og:type" content="website" />
+    <meta property="zalo:image" content="https://raw.githubusercontent.com/duongthaitan/PhotoBooth_Tandev.foto/main/backgound.jpg" />
+    <meta name="zalo-platform-site-verification" content="your-verification-code" />
 
 
   <!-- CSS & JS -->
