Cap nhat anh bia ưebsite

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta property="og:url" content="https://photobooth.tanhipp.id.vn/" />
     <meta property="og:type" content="website" />
     <meta property="zalo:image" content="https://raw.githubusercontent.com/duongthaitan/PhotoBooth_Tandev.foto/main/backgound.jpg" />
+    <!-- Add query parameter để force refresh -->
+<meta property="og:image" content="https://raw.githubusercontent.com/duongthaitan/PhotoBooth_Tandev.foto/main/backgound.jpg?v=2024" />
     <meta name="zalo-platform-site-verification" content="your-verification-code" />
 
 
